native_audio_runtime/lib/src/third_party/native_audio_runtime.g.dart

// AUTO-GENERATED FILE — DO NOT EDIT BY HAND.
//
// Generated by package:ffigen via tool/ffigen.dart.
// To regenerate: dart run tool/ffigen.dart
//
// Bindings for the native_audio_runtime C DSP library.
// Covers: native_audio_runtime.h, audio_buffer.h, dsp_pipeline.h,
//         gain/comp/crossfeed/limiter/loudness/replaygain/soft_clipper
//         processors, and aaudio_probe.h.
//
// ignore_for_file: type=lint, unused_import, unused_element,
//   camel_case_types, non_constant_identifier_names,
//   deprecated_member_use_from_same_package, experimental_member_use

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import
import 'dart:ffi' as ffi;

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int native_runtime_init();

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int native_runtime_dispose();

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int native_runtime_is_initialized();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>(isLeaf: true)
external ffi.Pointer<ffi.Char> native_runtime_get_version();

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int native_runtime_capability_count();

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Int32)>(isLeaf: true)
external ffi.Pointer<ffi.Char> native_runtime_capability_key(int index);

@ffi.Native<ffi.Int32 Function(ffi.Int32)>(isLeaf: true)
external int native_runtime_capability_supported(int index);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Char>)>(isLeaf: true)
external int native_runtime_register_module(ffi.Pointer<ffi.Char> module_id);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int native_runtime_module_count();

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Int32)>(isLeaf: true)
external ffi.Pointer<ffi.Char> native_runtime_module_id_at(int index);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int native_runtime_last_status();

@ffi.Native<
  ffi.Pointer<NarAudioBuffer> Function(
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
  )
>(isLeaf: true)
external ffi.Pointer<NarAudioBuffer> nar_audio_buffer_create(
  int capacity_frames,
  int channel_count,
  int sample_rate,
  int format,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<NarAudioBuffer>)>(isLeaf: true)
external void nar_audio_buffer_destroy(ffi.Pointer<NarAudioBuffer> buffer);

@ffi.Native<ffi.Pointer<ffi.Float> Function(ffi.Pointer<NarAudioBuffer>)>(
  isLeaf: true,
)
external ffi.Pointer<ffi.Float> nar_audio_buffer_data(
  ffi.Pointer<NarAudioBuffer> buffer,
);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<NarAudioBuffer>)>(isLeaf: true)
external int nar_audio_buffer_capacity_frames(
  ffi.Pointer<NarAudioBuffer> buffer,
);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<NarAudioBuffer>)>(isLeaf: true)
external int nar_audio_buffer_frame_count(ffi.Pointer<NarAudioBuffer> buffer);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<NarAudioBuffer>, ffi.Int32)>(
  isLeaf: true,
)
external int nar_audio_buffer_set_frame_count(
  ffi.Pointer<NarAudioBuffer> buffer,
  int frame_count,
);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<NarAudioBuffer>)>(isLeaf: true)
external int nar_audio_buffer_channel_count(ffi.Pointer<NarAudioBuffer> buffer);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<NarAudioBuffer>)>(isLeaf: true)
external int nar_audio_buffer_sample_rate(ffi.Pointer<NarAudioBuffer> buffer);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<NarAudioBuffer>)>(isLeaf: true)
external int nar_audio_buffer_format(ffi.Pointer<NarAudioBuffer> buffer);

@ffi.Native<ffi.Int64 Function(ffi.Pointer<NarAudioBuffer>)>(isLeaf: true)
external int nar_audio_buffer_timestamp_us(ffi.Pointer<NarAudioBuffer> buffer);

@ffi.Native<ffi.Void Function(ffi.Pointer<NarAudioBuffer>, ffi.Int64)>(
  isLeaf: true,
)
external void nar_audio_buffer_set_timestamp_us(
  ffi.Pointer<NarAudioBuffer> buffer,
  int timestamp_us,
);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int nar_dsp_pipeline_init();

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int nar_dsp_pipeline_is_initialized();

@ffi.Native<ffi.Int32 Function(ffi.Pointer<NarAudioBuffer>)>(isLeaf: true)
external int nar_dsp_pipeline_process(ffi.Pointer<NarAudioBuffer> buffer);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<NarAudioBuffer>, ffi.Int32)>(
  isLeaf: true,
)
external int nar_dsp_pipeline_process_stream(
  ffi.Pointer<NarAudioBuffer> buffer,
  int stream_slot,
);

@ffi.Native<
  ffi.Int32 Function(ffi.Pointer<ffi.Float>, ffi.Int32, ffi.Int32, ffi.Int32)
>(isLeaf: true)
external int nar_dsp_pipeline_process_raw(
  ffi.Pointer<ffi.Float> data,
  int frame_count,
  int channel_count,
  int sample_rate,
);

@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<ffi.Float>,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
    ffi.Int32,
  )
>(isLeaf: true)
external int nar_dsp_pipeline_process_raw_stream(
  ffi.Pointer<ffi.Float> data,
  int frame_count,
  int channel_count,
  int sample_rate,
  int stream_slot,
);

@ffi.Native<ffi.Void Function()>(isLeaf: true)
external void nar_dsp_pipeline_reset();

@ffi.Native<ffi.Void Function()>(isLeaf: true)
external void nar_dsp_pipeline_dispose();

@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Char>, ffi.Int32)>(isLeaf: true)
external int nar_dsp_pipeline_set_enabled(
  ffi.Pointer<ffi.Char> id,
  int enabled,
);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Char>)>(isLeaf: true)
external int nar_dsp_pipeline_is_enabled(ffi.Pointer<ffi.Char> id);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int nar_dsp_pipeline_total_latency_frames();

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int nar_dsp_pipeline_processor_count();

@ffi.Native<ffi.Pointer<ffi.Char> Function(ffi.Int32)>(isLeaf: true)
external ffi.Pointer<ffi.Char> nar_dsp_pipeline_processor_id_at(int index);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int nar_gain_processor_register_internal();

@ffi.Native<ffi.Void Function(ffi.Float)>(isLeaf: true)
external void nar_gain_processor_set_gain_db(double gain_db);

@ffi.Native<ffi.Float Function()>(isLeaf: true)
external double nar_gain_processor_get_gain_db();

@ffi.Native<ffi.Void Function(ffi.Int32)>(isLeaf: true)
external void nar_gain_processor_set_bypass(int bypass);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int nar_gain_processor_get_bypass();

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int nar_comp_processor_register_internal();

@ffi.Native<
  ffi.Int32 Function(
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
  )
>(isLeaf: true)
external int nar_comp_set_params(
  double threshold_db,
  double ratio,
  double attack_ms,
  double release_ms,
  double knee_db,
  double makeup_gain_db,
  double sample_rate,
);

@ffi.Native<ffi.Void Function(ffi.Int32)>(isLeaf: true)
external void nar_comp_set_bypass(int bypass);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int nar_comp_get_bypass();

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int nar_crossfeed_processor_register_internal();

@ffi.Native<
  ffi.Int32 Function(
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
  )
>(isLeaf: true)
external int nar_crossfeed_set_params(
  double amount,
  double cutoff_hz,
  double hf_comp_db,
  double hf_comp_hz,
  double width,
  double sample_rate,
);

@ffi.Native<ffi.Void Function(ffi.Int32)>(isLeaf: true)
external void nar_crossfeed_set_bypass(int bypass);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int nar_crossfeed_get_bypass();

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int nar_limiter_processor_register_internal();

@ffi.Native<ffi.Int32 Function(ffi.Float, ffi.Float, ffi.Float)>(isLeaf: true)
external int nar_limiter_set_params(
  double threshold_db,
  double release_ms,
  double sample_rate,
);

@ffi.Native<ffi.Void Function(ffi.Int32)>(isLeaf: true)
external void nar_limiter_set_bypass(int bypass);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int nar_limiter_get_bypass();

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int nar_limiter_lookahead_frames();

/// Register the Loudness Normalization processor with the DSP pipeline.
/// Must be called after nar_replaygain_processor_register_internal() so that
/// the correct slot order is preserved. Returns NATIVE_RUNTIME_OK (0) on
/// success, or NATIVE_RUNTIME_ERROR_DUPLICATE_MODULE if already registered.
@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int nar_loudness_processor_register_internal();

/// Set the target output loudness in LUFS.
/// Typical values: −23.0 (EBU R128 broadcast), −16.0 (podcast), −14.0 (streaming).
/// Clamped to [−36.0, −6.0] LUFS. Default: −23.0.
/// Thread-safe atomic store — takes effect on the next gating-block boundary.
@ffi.Native<ffi.Void Function(ffi.Float)>(isLeaf: true)
external void nar_loudness_set_target_lufs(double target_lufs);

/// Enable (bypass=0) or bypass (bypass=1) the Loudness Normalization processor.
/// Thread-safe atomic store. When bypassed, audio passes through unmodified.
@ffi.Native<ffi.Void Function(ffi.Int32)>(isLeaf: true)
external void nar_loudness_set_bypass(int bypass);

/// Returns 1 if the processor is currently bypassed, 0 if active.
@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int nar_loudness_get_bypass();

/// Update the playback sample rate and recompute K-weighting coefficients.
///
/// Must be called whenever ExoPlayer reports a sample rate change.
/// Internally engages a transient bypass, recomputes biquad coefficients for
/// the new rate using the literal BS.1770-4 closed-form formulas, clears all
/// filter and gating state, then re-engages the processor.
/// The momentary bypass (~1 buffer) is completely inaudible.
///
/// Default: 48000 Hz (set during init — no call needed for standard streams).
@ffi.Native<ffi.Void Function(ffi.Int32)>(isLeaf: true)
external void nar_loudness_set_sample_rate(int sample_rate);

/// Current gated-integrated measured loudness in LUFS.
///
/// Updated on the audio thread every 100 ms (BS.1770-4 gating hop) once the
/// first 400 ms gating block has both filled and passed the absolute +
/// relative loudness gates.
/// Returns −99.0 before the first gated measurement is available (e.g.
/// during the initial 400 ms, or for content that never exceeds the
/// absolute gate) or when bypassed.
/// Thread-safe atomic load — safe to call from any thread including the UI.
@ffi.Native<ffi.Float Function()>(isLeaf: true)
external double nar_loudness_get_measured_lufs();

/// Current smooth gain applied to the audio stream, in dBFS.
///
/// Positive = boost, negative = attenuation. Refreshed every 100 ms hop.
/// Returns 0.0 when bypassed.
@ffi.Native<ffi.Float Function()>(isLeaf: true)
external double nar_loudness_get_applied_gain_db();

/// Reset the loudness analyzer for stream 0: clear K-weighting filter state,
/// the sub-block gating ring buffer, the gated cumulative accumulators, and
/// smooth gain back to unity. Gain target is reset to unity.
///
/// Call on every track change so the new track is measured fresh.
/// Thread-safe: internally uses a transient bypass to prevent the audio
/// thread from reading stale state.
///
/// Note: scoped to stream 0 ONLY to avoid clobbering a concurrently
/// preloading standby stream's gating history. See nar_loudness_reset_stream()
/// for per-stream control once the crossfade code tracks stream assignment.
@ffi.Native<ffi.Void Function()>(isLeaf: true)
external void nar_loudness_reset();

/// Register the ReplayGain processor with the DSP pipeline.
/// Must be called after nar_dsp_pipeline_init() and before any playback.
/// Returns NATIVE_RUNTIME_OK (0) on success, or
/// NATIVE_RUNTIME_ERROR_DUPLICATE_MODULE if already registered.
@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int nar_replaygain_processor_register_internal();
